# Digitisation-Classification

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
.aws/: ecs-task-definition.json
.github/workflows/: ci.yml  deploy-ecs.yml
configs/: config.example.yaml  dev.yaml  prod.yaml  staging.yaml
data/feedback/classification/: feedback_20260214T121556Z_112282.json
scripts/: retrain_worker.py
scripts/mlops/: retrain_with_metrics.py  run_prefect_flow.py  summarize_monitoring.py
src/contract_ai/: cli.py
src/contract_ai/api/: main.py
src/contract_ai/classification/: classifier.py  clip_backend.py  dataset.py
src/contract_ai/common/: io_utils.py  schemas.py  settings.py
src/contract_ai/contracts/: __init__.py  extractors.py  pipeline.py  renderer.py
src/contract_ai/mlops/: __init__.py  flows.py  gates.py  monitoring.py  tracking.py
src/contract_ai/retraining/: manager.py
tests/: test_feedback.py  test_mlops_gates.py  test_ordering.py
