[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-digitization-ai"
version = "0.1.0"
description = "Contract PDF extraction + product image classification with auto-retraining"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "Pillow>=10.2",
  "opencv-python>=4.9",
  "PyMuPDF>=1.24",
  "pdfplumber>=0.11",
  "camelot-py>=0.11",
  "tabulate>=0.9",
  "pytesseract>=0.3.10",
  "scikit-learn>=1.4",
  "fastapi>=0.110",
  "uvicorn>=0.28",
  "python-multipart>=0.0.9",
  "typer>=0.12",
  "rich>=13.7",
  "joblib>=1.3",
  "open_clip_torch>=2.24",
  "torch>=2.2",
  "torchvision>=0.17",
  "pyyaml>=6.0.1",
  "jinja2>=3.1",
  "mlflow>=2.12",
  "prefect>=2.18",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.3",
]
mlops = [
  "dvc[s3]>=3.50",
]

[project.scripts]
contract-ai = "contract_ai.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
